feat(user): add update + delete for user
